# loose_enum

./: Cargo.toml  LICENSE-MIT  README.md  macro_docs.md
.github/workflows/: publish.yml  rust.yml
examples/: loose_bool.rs  loose_bool_generic.rs
src/: __internal.rs  lib.rs  loose_bool.rs
