[package]
name = "loose_enum"
version = "0.1.0-beta.1"
edition = "2024"
description = "A macro for defining loose repr enums."
categories = ["no-std", "no-std::no-alloc", "rust-patterns"]
keywords = ["loose", "repr", "representation", "enum"]
repository = "https://github.com/AlephCubed/loose_enum"
license = "MIT OR Apache-2.0"
authors = ["AlephCubed"]

[features]
default = ["std"]
std = []
serde = ["dep:serde_core"]

[dependencies]
serde_core = { version = "1.0", optional = true, default-features = false, features = [
  "std",
] }

[[example]]
name = "loose_bool"
crate-type = ["lib"]
